src/runboat/kubefiles/ingress_odoo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  number: 8069
